<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Profile"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Profile"
            android:textSize="30dp"
            android:id="@+id/pantry_text1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="30sp"
            android:text="@string/user_info"
            android:id="@+id/user_info"
            android:textStyle="bold"
            android:layout_below="@id/pantry_text1"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/name_field"
            android:layout_below="@id/user_info">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textSize="25sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_name"
                android:textSize="20sp"
                android:id="@+id/name_edit_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:id="@+id/email_field"
            android:layout_below="@id/name_field">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textSize="25sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_email"
                android:id="@+id/email_edit_text"
                android:textSize="20sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/search_settings"
            android:textSize="25sp"
            android:layout_below="@id/email_field"
            android:id="@+id/search_settings"
            android:textStyle="bold"
            android:paddingTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/toggle_button_layout"
            android:layout_below="@id/search_settings">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="1097dp"
                android:id="@+id/toggle_list_view"
                />

        </LinearLayout>



    </RelativeLayout>
</ScrollView>