<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/edit_pantry_option_field"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/delete_selected"
            android:id="@+id/edit_pantry_delete"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:id="@+id/edit_pantry_edit_text"
            android:text="@string/enter_ingre_name"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/add_ingre"
            android:id="@+id/edit_pantry_add"
            />
    </LinearLayout>
    <View
        android:id="@+id/edit_pantry_div"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/edit_pantry_option_field"
        android:background="#d2dfdb" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/edit_pantry_div"
        android:id="@+id/edit_pantry_items"
        android:layout_margin="2dp"/>



</RelativeLayout>