<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="208dp"
        android:id="@+id/user_picture"
        android:layout_alignParentStart="true"
        android:src="@drawable/unicorn"
        android:padding="8dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:paddingEnd="8dp"
        android:layout_above="@+id/favorites_title"
        android:layout_toEndOf="@+id/user_picture"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_email"
            android:text="@string/default_email"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:text="@string/default_name"
            android:textSize="24sp"
            android:layout_above="@id/user_email"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:id="@+id/editProfile"
            android:background="@drawable/selector"
            android:singleLine="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:textColor="#ffffff" />

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favorites_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/favorites_title"
        android:textStyle="bold"
        android:layout_below="@+id/user_picture"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        />
    <View
        android:id="@+id/profile_div"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d2dfdb"
        android:layout_below="@id/favorites_title"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favorites_list"
        android:layout_below="@id/profile_div"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:dividerHeight="4px"
        />
</RelativeLayout>