<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:id="@+id/main_top_bar">
        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/main_settings_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:background="@drawable/donut_settings_gear" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:padding="4dp"
            android:layout_toRightOf="@id/main_settings_button">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:paddingTop="16dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                />
        </RelativeLayout>

        <View
            android:id="@+id/horizontal_bar_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/main_settings_button"
            android:background="#d2dfdb" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_settings_button"
            android:id="@+id/main_button_container"
            android:paddingBottom="2dp"
        >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/main_profile_button"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    />

                <View
                    android:id="@+id/main_profile_bar"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#d2dfdb"
                    android:visibility="visible"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pantry"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/main_pantry_button"
                    android:textColor="#FFFFFF"
                    />

                <View
                    android:id="@+id/main_pantry_bar"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#d2dfdb"
                    android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/main_search_button"
                    android:textColor="#FFFFFF"
                    />

                <View
                    android:id="@+id/main_search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#d2dfdb"
                    android:visibility="invisible"/>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_pages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_top_bar"/>


</RelativeLayout>